--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   "require": {
     "php": "^7.4 || ^8.0",
     "phpspec/phpspec": "^6.1 || ^7" ,
-    "symfony/console": "^3.4 || ^4.0 || ^5.0"
+    "symfony/console": "^3.4 || ^4.0 || ^5.0 || ^6.0 || ^7.0"
   },
   "require-dev": {
     "roave/security-advisories": "dev-master"
